--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@imagekit/next": "^2.1.2",
     "@types/bcrypt": "^5.0.2",
+    "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "mongoose": "^8.16.2",
     "next": "15.3.5",
